--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
   <script>
     const SUPABASE_URL = "https://jumfigqlnqplbpokqhvj.supabase.co";
-    const SUPABASE_ANON_KEY = "SUA_ANON_KEY_AQUI";
+    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp1bWZpZ3FsbnFwbGJwb2txaHZqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MTMyOTE1NzIsImV4cCI6MjAyODg2NzU3Mn0.oa9VZXbP0CefDeswtrGknD03f5AfO3JJsfVUF3HXLlE";
 
     async function carregarClima() {
       const url =
